modify landing page text

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -11,7 +11,7 @@
   <link rel="manifest" href="../../static/favicons/manifest.webmanifest" crossorigin="use-credentials">
   <link rel="stylesheet" href='../../static/style.css' />
   <meta name="description" content="Rejoignez la communauté des tuteurs et participez à la réussite des élèves des classes préparatoires “Talents du Service Public”.">
-  <title>Tutorat pour les élèves des classes préparatoires "Talents du Service Public"</title>
+  <title>Tutorat pour les élèves des classes préparatoires Talents</title>
 </head>
 
 <body>
