--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -7,7 +7,7 @@
           Devenez tuteurs&nbsp;!</p>
         </h1>
         <div class="sectionSubTitle" class="rf-text--lg">Rejoignez la communauté des tuteurs et participez à la réussite
-          des élèves des classes préparatoires “Talents du Service Public”.
+          des élèves des classes préparatoires Talents.
         </div>
         <a id="sectionOneButton" class="rf-btn rf-btn rf-btn--alt"
           href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">Je
@@ -25,7 +25,7 @@
       <div class="rf-grid-row rf-grid-row--center">
         <div>
           <h2 class="sectionTitle">Accompagner des élèves : pré-requis et engagements</h2>
-          <h3 class="sectionSubTitle">Engagez-vous au sein des “Prépas Talents” du Service Public en devenant
+          <h3 class="sectionSubTitle">Engagez-vous au sein des Prépas Talents en devenant
             tuteur&nbsp;!</h3>
         </div>
       </div>
@@ -69,7 +69,7 @@
 
       </div>
       <button id="openModaleButton" class="rf-btn rf-btn--secondary" data-rf-opened="false" aria-controls="rf-modal-1"
-        title="Les Prépas « Talents de service public »">Les Prépas « Talents de service public »
+        title="Les Prépas « Talents de service public »">Les Prépas Talents
       </button>
       <!--MODALE-->
       <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-1" class="rf-modal">
@@ -84,15 +84,14 @@
                 <div class="rf-modal__content">
                   <h2 id="rf-modal-title-modal-1" class="rf-modal__title"><span
                       class="rf-fi-arrow-right-line rf-fi--sm"></span>Les Prépas «&nbsp;Talents de service public&nbsp;»</h2>
-                  <p id="modalText">A partir de septembre 2021, une trentaine de classes préparatoires « Talent du
-                    service public », formation d'excellence dans les écoles de service public, les instituts d'études
+                  <p id="modalText">A partir de septembre 2021, une trentaine de classes préparatoires Talents, formation d'excellence dans les écoles de service public, les instituts d'études
                     politiques et les universités afin de préparer les élèves aux concours de la fonction publique de
                     catégorie A et A+, seront créées.<br>
-                    Les Prépas « Talents du service public » sont destinées aux étudiants boursiers les plus méritants
+                    Les Prépas Talents sont destinées aux étudiants boursiers les plus méritants
                     de l’enseignement supérieur pour préparer les concours donnant accès aux postes d’encadrement de la
                     fonction publique.<br>
                     En 2021, 1700 places seront offertes.<br>
-                    Le rôle des tuteurs est essentiel auprès des élèves des Prépas « Talents du service public ». En
+                    Le rôle des tuteurs est essentiel auprès des élèves des Prépas Talents. En
                     effet, les tuteurs accompagnent au maximum deux élèves dans leur préparation, en leur partageant,
                     d’une part, des conseils méthodologiques sur les épreuves de concours et, d’autre part, des clés de
                     réussite notamment organisationnelles pour vivre cette période intense de la manière la plus sereine
@@ -141,7 +140,7 @@
           <div id="id" class="rf-text--sm">
             <div class="sectionThreeNumber">4</div>
             <img class="sectionThreeCardImage" src="../../static/images/4.png" alt="" />
-            <p class="sectionThreeCardImageText">Un responsable pédagogique de classe Talents me contacte pour
+            <p class="sectionThreeCardImageText">Un responsable pédagogique d'une Prépa Talents me contacte pour
               m’affecter
               une ou un élève.</p>
           </div>
@@ -181,7 +180,7 @@
             <div class="sectionFourCardText">
               <p class="sectionFourCardTitle">Nicolas <span class="sectionFourCardRole">tuteur</span></p>
               <p class="sectionFourCardSubTitle">Être tuteur, c’est pouvoir partager avec un futur
-                candidat ou une future candidate des conseils de méthode pour chaque épreuve mais également pour vivre
+                candidat ou une future candidate des conseils de méthode pour chaque épreuve mais également apporter un appui pour vivre
                 sereinement sa préparation des concours. Ce sont des échanges réguliers pour rappeler que nous avons
                 vécu personnellement les mêmes interrogations et transmettre son goût du service public en discutant des
                 emplois occupés à la suite des concours.
