Change meta-description in header

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="../../static/favicons/favicon.ico" type="image/x-icon"><!-- 32×32 -->
   <link rel="manifest" href="../../static/favicons/manifest.webmanifest" crossorigin="use-credentials">
   <link rel="stylesheet" href='../../static/style.css' />
-  <meta name="description" content="Rejoignez la communauté des tuteurs et participez à la réussite des élèves des classes préparatoires “Talents du Service Public”.">
+  <meta name="description" content="Rejoignez la communauté des tuteurs et participez à la réussite des élèves des classes préparatoires Talents.">
   <title>Tutorat pour les élèves des classes préparatoires Talents</title>
 </head>
 
