add matomo tracking

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,11 @@
   <link rel="stylesheet" href='../../static/style.css' />
   <meta name="description" content="Rejoignez la communauté des tuteurs et participez à la réussite des élèves des Prépas Talents">
   <title>Tutorat pour les élèves des Prépas Talents</title>
+
+  <!-- Matomo -->
+  <script src="/static/js/matomo.js"></script>
+  <!-- End Matomo Code -->
+
 </head>
 
 <body>
