--- a/views/donnees-personnelles-et-gestion-des-cookies.ejs
+++ b/views/donnees-personnelles-et-gestion-des-cookies.ejs
@@ -27,7 +27,7 @@
   <h3 id="je-contribue-à-enrichir-vos-données-puis-je-y-accéder">Je contribue à enrichir vos données, puis-je y
     accéder ?</h3>
   <p>Bien sûr ! Les statistiques d’usage sont disponibles en accès libre sur <a target="_blank" rel="noopener"
-      href="https://stats.data.gouv.fr/index.php?module=CoreHome&action=index&date=yesterday&period=day&idSite=160#?idSite=160&period=day&date=yesterday&segment=&category=Dashboard_Dashboard&subcategory=1">stats.data.gouv.fr</a>.
+      href="https://stats.data.gouv.fr/index.php?module=CoreHome&action=index&idSite=172&period=range&date=previous30&updated=1#?idSite=172&period=range&date=previous30&category=Dashboard_Dashboard&subcategory=1">stats.data.gouv.fr</a>.
   </p>
 </div>
 <%- include('partials/footer') -%>
