--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') -%>
+<!--HOME PAGE-->
 <!--SECTION 1-->
 <div class="rf-container-fluid rf-pt-12w">
   <div class="rf-grid-row rf-grid-row--center rf-grid-row--middle rf-mt-11w rf-pb-4w">
