Correct source code link in footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,7 +12,7 @@
       </div>
       <div class="rf-footer__content">
         <p class="rf-footer__content-desc">Le code source est ouvert et les contributions sont bienvenues.
-          <a title="Voir le code source" href="https://github.com/betagouv/tutorat" target="_blank" rel="noopener">Voir
+          <a title="Voir le code source" href="https://github.com/betagouv/tutorat-betagouv/" target="_blank" rel="noopener">Voir
             le code
             source</a></p>
         <ul class="rf-footer__content-list">
