--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,6 +81,12 @@
                 <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-1"
                   target="_self">Fermer</button>
               </div>
+              
+              <div 
+              <a class="rf-btn rf-btn rf-btn--alt"
+              href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">FAQ</a>
+              </div>
+    
               <div class="rf-modal__content">
                 <h2 id="rf-modal-title-modal-1" class="rf-modal__title"><span
                     class="rf-fi-arrow-right-line rf-fi--sm"></span>«&nbsp;Les Prépas Talents&nbsp;»</h2>
