--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,7 @@
     </button>
     
               <div 
-              <a class="rf-btn rf-btn rf-btn--alt"
+              <a id="sectionOneButton" class="rf-btn rf-btn rf-btn--alt"
               href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">FAQ</a>
               </div>
               
