--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
     
               <div 
               <a id="sectionOneButton" class="rf-btn rf-btn rf-btn--alt"
-              href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">FAQ</a>
+              href="/faq">FAQ</a>
               </div>
               
     <!--MODALE-->
