--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,10 +72,9 @@
       title="Les Prépas « Talents de service public »">Les Prépas Talents
     </button>
     
-              <div 
+              
               <a id="sectionOneButton" class="rf-btn rf-btn rf-btn--alt"
-              href="/faq">FAQ</a>
-              </div>
+        href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">FAQ</a>
               
     <!--MODALE-->
     <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-1" class="rf-modal">
