--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,10 +72,7 @@
       title="Les Prépas « Talents de service public »">Les Prépas Talents
     </button>
     
-    <button          
-        <a id="sectionOneButton" class="rf-btn rf-btn rf-btn--alt"
-        href="/faq">FAQ</a>
-    </button>    
+    <button  class="rf-btn rf-btn rf-btn--alt"><a href="/faq">FAQ</a></button>    
               
     <!--MODALE-->
     <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-1" class="rf-modal">
