--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -45,8 +45,8 @@
             cookies</a>
         </li>
         
-          <li class="rf-footer__bottom-item">
-          <a class="rf-footer__bottom-link" href="/faq">En savoir plus</a>
+        <li class="rf-footer__bottom-item">
+          <a class="rf-footer__bottom-link" href="/faq">en savoir plus</a>
         </li>
       
       </ul>
