--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -1,6 +1,5 @@
-
-
 <%- include('partials/header') -%>
+<!--FAQ-->
 <div class="rf-container rf-py-6w"></div>
 <div class="rf-container rf-mb-5w rf-mt-12w" id="faqText">
   <h1 id="etudiant">Je suis étudiant</h1>
@@ -20,203 +19,39 @@
         {
           id: 'e0',
           question: 'Qui peut candidater pour être tuteur d’étudiants de Prépas Talents ?',
-          response: 'Ce dispositif est ouvert en priorité à tous les élèves et anciens élèves des écoles de service public
-          ayant obtenu leur concours il y’a moins de 3 ans et souhaitant accompagner un élève d’une des
-          Prépas Talents, dans la préparation au concours de la fonction publique.'
+          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
-
     <%- include('partials/faq-item',
         {
           id: 'e1',
-          question: 'Comment se déroule l’entrée dans la communauté des tuteurs de Prépas Talents ?',
-          response: 'Vous remplissez un formulaire d’inscription, une fois celui-ci validé, vous recevez un lien pour un
-          module de formation en ligne. Vous intégrez le vivier de tuteurs des Prépas Talents.'
+          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
+          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
-
     <%- include('partials/faq-item',
         {
           id: 'e2',
-          question: 'Chaque tuteur aura-t-il un étudiant à accompagner ?',
-          response: 'Non. En entrant dans le vivier des tuteurs de Prépas Talents, les tuteurs sont mis à disposition des
-          responsables pédagogiques des Prépas Talents. Ce sont eux qui décideront des accompagnements à
-          mettre en place en fonction des besoins de l’étudiant.'
+          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
+          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
-
     <%- include('partials/faq-item',
         {
           id: 'e3',
-          question: 'Y a t’il une limite quant au nombre de tutoré par tuteur ?,
-          response: 'Oui, le nombre de tutoré ne doit pas excéder deux par tuteur.'
+          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
+          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
-
     <%- include('partials/faq-item',
         {
           id: 'e4',
-          question: 'Comment se déroule l’appariement tuteur/tutoré ?',
-          response: 'L’appariement est laissé à la discrétion du responsable pédagogique de la Prépa Talents. Il identifie le
-ou les tuteurs nécessaires au regard des besoins de l’étudiant.'
+          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
+          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
   </ul>
-  <h1>Je suis tuteur</h1>
-  <div class="rf-mb-3w">
-    <div>
-      <span class="rf-fi-arrow-right-line rf-fi--md"></span>
-      <span>Vous voulez plus d'infos sur le dispositif ?</span>
-    </div>
-    <div>
-      <a class="rf-btn rf-btn--alt rf-mt-2w" href="">
-        Voir les tuteurs
-      </a>
-    </div>
-  </div>
-  <ul class="rf-accordion-group">
-    <h2>Éligibilité</h2>
-    <%- include('partials/faq-item',
-        {
-          id: 'p0',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p1',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p2',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p3',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p4',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p5',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p6',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-
-    <h2 id="others">Autres</h2>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p11',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p12',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p13',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p14',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p15',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-    <%- include('partials/faq-item',
-        {
-          id: 'p16',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-  </ul>
-  <h1>Je suis interessé</h1>
-  <div class="rf-mb-3w">
-    <div>
-      <span class="rf-fi-arrow-right-line rf-fi--md"></span>
-      <span>Vous voulez plus d'infos sur le dispositif ?</span>
-    </div>
-    <div>
-      <a class="rf-btn rf-btn--alt rf-my-2w" href="">
-        Voir les infos
-      </a>
-    </div>
-    <div>
-      <a class="rf-btn rf-btn--alt rf-my-2w" href="">
-        Je m'engage
-      </a>
-    </div>
-    <ul class="rf-accordion-group">
-      <%- include('partials/faq-item',
-        {
-          id: 'm0',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-
-      <%- include('partials/faq-item',
-        {
-          id: 'm1',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-        })
-        -%>
-    </ul>
   </div>
 </div>
 <%- include('partials/footer') -%> 
+
