--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -19,7 +19,9 @@
         {
           id: 'e0',
           question: 'Qui peut candidater pour être tuteur d’étudiants de Prépas Talents ?',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+          response: 'Ce dispositif est ouvert en priorité à tous les élèves et anciens élèves des écoles de service public
+          ayant obtenu leur concours il y’a moins de 3 ans et souhaitant accompagner un élève d’une des
+          Prépas Talents, dans la préparation au concours de la fonction publique.'
         })
         -%>
     <%- include('partials/faq-item',
