--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -32,21 +32,21 @@
     <%- include('partials/faq-item',
         {
           id: 'e2',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
+          question: 'Comment se déroule l’entrée dans la communauté des tuteurs de Prépas Talents ?',
           response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
     <%- include('partials/faq-item',
         {
           id: 'e3',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
+          question: 'Chaque tuteur aura-t-il un étudiant à accompagner ?',
           response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
     <%- include('partials/faq-item',
         {
           id: 'e4',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
+          question: 'Y a t’il une limite quant au nombre de tutoré par tuteur?',
           response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
         })
         -%>
