--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -25,29 +25,29 @@
     <%- include('partials/faq-item',
         {
           id: 'e1',
-          question: 'Le passage de Lorem Ipsum standard, utilisé depuis 1500',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+          question: 'Comment se déroule l’entrée dans la communauté des tuteurs de Prépas Talents ?',
+          response: 'Vous remplissez un formulaire d’inscription,  une fois celui-ci validé, vous recevez un lien pour un module de formation en ligne. Vous intégrez le vivier de tuteurs des Prépas Talents.'
         })
         -%>
     <%- include('partials/faq-item',
         {
           id: 'e2',
-          question: 'Comment se déroule l’entrée dans la communauté des tuteurs de Prépas Talents ?',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+          question: 'Chaque tuteur aura-t-il un étudiant à accompagner ?',
+          response: 'Non.  En entrant dans le vivier des tuteurs de Prépas Talents, les tuteurs sont mis à disposition des responsables pédagogiques des Prépas Talents. Ce sont eux qui décideront des accompagnements à mettre en place en fonction des besoins de l’étudiant.'
         })
         -%>
     <%- include('partials/faq-item',
         {
           id: 'e3',
-          question: 'Chaque tuteur aura-t-il un étudiant à accompagner ?',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+          question: 'Y a t’il une limite quant au nombre de tutoré par tuteur?',
+          response: 'Oui, le nombre de tutoré ne doit pas excéder deux par tuteur.'
         })
         -%>
     <%- include('partials/faq-item',
         {
           id: 'e4',
-          question: 'Y a t’il une limite quant au nombre de tutoré par tuteur?',
-          response: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+          question: 'Comment se déroule l’appariement tuteur/tutoré ?',
+          response: 'L’appariement est laissé à la discrétion du responsable pédagogique de la Prépa Talents. Il identifie le ou les tuteurs nécessaires au regard des besoins de l’étudiant.'
         })
         -%>
   </ul>
