--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -50,6 +50,40 @@
           response: 'L’appariement est laissé à la discrétion du responsable pédagogique de la Prépa Talents. Il identifie le ou les tuteurs nécessaires au regard des besoins de l’étudiant.'
         })
         -%>
+    
+    <%- include('partials/faq-item',
+        {
+          id: 'e5',
+          question: 'Quelle est la durée du tutorat ?',
+          response: 'Le tutorat se déroule durant l’année de préparation au concours. La période exacte est fixée en accord avec le responsable pédagogique de la Prépa et l’étudiant.'
+        })
+        -%> 
+    
+    <%- include('partials/faq-item',
+        {
+          id: 'e6',
+          question: 'Combien de temps dois-je prendre pour assurer le tutorat ?',
+          response: 'Cela est variable en fonction des besoins de l’étudiant. Le tutorat nécessite d’être disponible et joignable. Il nécessite également un engagement fort de votre part sur toute la durée de la préparation au concours. La fréquence des rencontres s’établit entre le tuteur et le tutoré, en fonction des besoins identifiés de l’étudiant.'
+        })
+        -%>  
+    
+    <%- include('partials/faq-item',
+        {
+          id: 'e7',
+          question: 'Le tutorat peut-il être assuré à distance ?',
+          response: 'Oui. Toutefois, nous privilégions une présence physique auprès de l’étudiant notamment à des moments clés de sa préparation. Le choix des modalités d’accompagnement est discuté conjointement avec le responsable pédagogique de la Prépa Talents et l’étudiant.'
+        })
+        -%>
+       
+    <%- include('partials/faq-item',
+        {
+          id: 'e8',
+          question: 'Le tutorat est-il rémunéré ?',
+          response: 'Les modalités de rémunération peuvent varier en fonction des Prépas Talents. De manière générale, la mission de tutorat n’est pas rémunérée, cependant, un défraiement peut être octroyé au tuteur. Les modalités pratiques sont à voir avec le responsable pédagogique de la Prépa Talents.'
+        })
+        -%>         
+     
+     
   </ul>
   </div>
 </div>
