--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,7 +130,7 @@
         <div class="rf-text--sm">
           <div class="sectionThreeNumber">2</div>
           <img class="sectionThreeCardImage" src="../../static/images/1.png" alt="" />
-          <p class="sectionThreeCardImageText">Mon dossier sera validé et si besoin, je suis recontacté pour un entretien à distance.</p>
+          <p class="sectionThreeCardImageText">Je reçois ma confirmation d’inscription.</p>
         </div>
       </div>
       <div class="rf-col-xs-12 rf-col-md-4 rf-p-3w">
