--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
       title="Les Prépas « Talents de service public »">Les Prépas Talents
     </button>
     
-    <button  class="rf-btn rf-btn rf-btn--alt"><a href="/faq">FAQ</a></button>    
+        
               
     <!--MODALE-->
     <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-1" class="rf-modal">
@@ -161,6 +161,9 @@
     </div>
     <a class="rf-btn rf-btn rf-btn--alt"
       href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">Je m’engage</a>
+      
+    <button class="rf-btn rf-btn rf-btn--alt"><a href="/faq">J'ai encore des questions ?</a></button>
+    
   </div>
 </div>
 <!--SECTION 4-->
