--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -2,17 +2,21 @@
 <!--FAQ-->
 <div class="rf-container rf-py-6w"></div>
 <div class="rf-container rf-mb-5w rf-mt-12w" id="faqText">
-  <h1 id="etudiant">Je suis étudiant</h1>
+  <h1 id="etudiant">En savoir plus ?</h1>
   <div class="rf-mb-3w">
     <div>
       <span class="rf-fi-arrow-right-line rf-fi--md"></span>
-      <span>Vous voulez plus d'infos sur le dispositif ?</span>
+      <span>Vous avez encore une question et ne trouvez pas la réponse ci-dessous ? N'hésitez pas à nous contacter directement : contact@beta.gouv.fr</span>
     </div>
+    
+    <!--
     <div>
       <a class="rf-btn rf-btn--alt rf-mt-2w" href="">
         Voir les étudiants
       </a>
     </div>
+    -->
+    
   </div>
   <ul class="rf-accordion-group">
     <%- include('partials/faq-item',
