--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -6,7 +6,7 @@
   <div class="rf-mb-3w">
     <div>
       <span class="rf-fi-arrow-right-line rf-fi--md"></span>
-      <span>Vous avez encore une question et ne trouvez pas la réponse ci-dessous ? N'hésitez pas à nous contacter directement : contact@beta.gouv.fr</span>
+      <span>Vous avez encore une question et ne trouvez pas la réponse ci-dessous ? N'hésitez pas à nous contacter directement : tutorat@beta.gouv.fr</span>
     </div>
     
     <!--
