--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -46,7 +46,7 @@
         </li>
         
         <li class="rf-footer__bottom-item">
-          <a class="rf-footer__bottom-link" href="/faq">en savoir plus</a>
+          <a class="rf-footer__bottom-link" href="/faq">FAQ</a>
         </li>
       
       </ul>
