--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
                 <p id="modalText">A partir de septembre 2021, une soixantaine de Prépas Talents, formation d'excellence
                   dans les écoles de service public, les instituts d'études
                   politiques et les universités afin de préparer les élèves aux concours de la fonction publique de
-                  catégorie A et A+, seront créées.<br>
+                  catégorie B, A et A+, seront créées.<br>
                   Les Prépas Talents sont destinées aux étudiants boursiers les plus méritants
                   de l’enseignement supérieur pour préparer les concours donnant accès aux postes d’encadrement de la
                   fonction publique.<br>
