--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
       <div class="rf-col-xs-12 rf-col-md-4 rf-p-3w">
         <div class="rf-text--sm">
           <img class="sectionTwoCardImage" src="../../static/images/Calendar.svg" alt="" />
-          <p class="sectionTwoCardText">Avoir passé un concours de la fonction publique il y a moins de 3 ans.</p>
+          <p class="sectionTwoCardText">Avoir passé un concours de la fonction publique il y a moins de 6 ans.</p>
         </div>
       </div>
     </div>
@@ -110,7 +110,7 @@
     </dialog>
   </div>
 </div>
-<!--SECTION 3-->
+<!--SECTION -->
 <div id="sectionThree" class="rf-container-fluid rf-centered rf-pb-6w rf-pt-2w">
   <div id="sectionThreeContainer" class="rf-col rf-col-xs-10 rf-col-md-8 rf-my-3w">
     <div class="rf-grid-row rf-grid-row--center">
