--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,6 +72,9 @@
       title="Les Prépas « Talents de service public »">Les Prépas Talents
     </button>
     
+    <button id="openModaleButton" class="rf-btn rf-btn--secondary" data-rf-opened="false" aria-controls="rf-modal-1"
+      title="Les Prépas « Talents de service public »">La charte
+    </button>
         
               
     <!--MODALE-->
@@ -102,7 +105,7 @@
                   réussite notamment organisationnelles pour vivre cette période intense de la manière la plus sereine
                   possible.</p>
                 </p>
-              </div>
+              </div>                     
             </div>
           </div>
         </div>
@@ -110,6 +113,8 @@
     </dialog>
   </div>
 </div>
+
+
 <!--SECTION -->
 <div id="sectionThree" class="rf-container-fluid rf-centered rf-pb-6w rf-pt-2w">
   <div id="sectionThreeContainer" class="rf-col rf-col-xs-10 rf-col-md-8 rf-my-3w">
