--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,12 +72,12 @@
       title="Les Prépas « Talents de service public »">Les Prépas Talents
     </button>
     
-    <button id="openModaleButton" class="rf-btn rf-btn--secondary" data-rf-opened="false" aria-controls="rf-modal-1"
+    <button id="openModaleButton" class="rf-btn rf-btn--secondary" data-rf-opened="false" aria-controls="rf-modal-2"
       title="Les Prépas « Talents de service public »">La charte
     </button>
         
               
-    <!--MODALE-->
+    <!--MODALE 1-->
     <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-1" class="rf-modal">
       <div class="rf-container--fluid rf-container-md">
         <div class="rf-grid-row rf-grid-row--center">
@@ -91,6 +91,43 @@
               <div class="rf-modal__content">
                 <h2 id="rf-modal-title-modal-1" class="rf-modal__title"><span
                     class="rf-fi-arrow-right-line rf-fi--sm"></span>«&nbsp;Les Prépas Talents&nbsp;»</h2>
+                <p id="modalText">A partir de septembre 2021, une soixantaine de Prépas Talents, formation d'excellence
+                  dans les écoles de service public, les instituts d'études
+                  politiques et les universités afin de préparer les élèves aux concours de la fonction publique de
+                  catégorie B, A et A+, seront créées.<br>
+                  Les Prépas Talents sont destinées aux étudiants boursiers les plus méritants
+                  de l’enseignement supérieur pour préparer les concours donnant accès aux postes d’encadrement de la
+                  fonction publique.<br>
+                  En 2021, 1700 places seront offertes.<br>
+                  Le rôle des tuteurs est essentiel auprès des élèves des Prépas Talents. En
+                  effet, les tuteurs accompagnent au maximum deux élèves dans leur préparation, en leur partageant,
+                  d’une part, des conseils méthodologiques sur les épreuves de concours et, d’autre part, des clés de
+                  réussite notamment organisationnelles pour vivre cette période intense de la manière la plus sereine
+                  possible.</p>
+                </p>
+              </div>                     
+            </div>
+          </div>
+        </div>
+      </div>
+    </dialog>
+  </div>
+</div>
+
+<!--MODALE 2-->
+    <dialog aria-labelledby="rf-modal-title-modal-2" role="dialog" id="rf-modal-2" class="rf-modal">
+      <div class="rf-container--fluid rf-container-md">
+        <div class="rf-grid-row rf-grid-row--center">
+          <div class="rf-col-12 rf-col-md-6">
+            <div class="rf-modal__body">
+              <div class="rf-modal__header">
+                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-2"
+                  target="_self">Fermer</button>
+              </div>
+    
+              <div class="rf-modal__content">
+                <h2 id="rf-modal-title-modal-2" class="rf-modal__title"><span
+                    class="rf-fi-arrow-right-line rf-fi--sm"></span>«&nbsp;TEST&nbsp;»</h2>
                 <p id="modalText">A partir de septembre 2021, une soixantaine de Prépas Talents, formation d'excellence
                   dans les écoles de service public, les instituts d'études
                   politiques et les universités afin de préparer les élèves aux concours de la fonction publique de
