--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,32 +115,51 @@
 </div>
 
 <!--MODALE 2-->
-    <dialog aria-labelledby="rf-modal-title-modal-2" role="dialog" id="rf-modal-2" class="rf-modal">
+    <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-2" class="rf-modal">
       <div class="rf-container--fluid rf-container-md">
         <div class="rf-grid-row rf-grid-row--center">
           <div class="rf-col-12 rf-col-md-6">
             <div class="rf-modal__body">
               <div class="rf-modal__header">
-                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-2"
+                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-1"
                   target="_self">Fermer</button>
               </div>
     
               <div class="rf-modal__content">
                 <h2 id="rf-modal-title-modal-2" class="rf-modal__title"><span
                     class="rf-fi-arrow-right-line rf-fi--sm"></span>«&nbsp;TEST&nbsp;»</h2>
-                <p id="modalText">A partir de septembre 2021, une soixantaine de Prépas Talents, formation d'excellence
-                  dans les écoles de service public, les instituts d'études
-                  politiques et les universités afin de préparer les élèves aux concours de la fonction publique de
-                  catégorie B, A et A+, seront créées.<br>
-                  Les Prépas Talents sont destinées aux étudiants boursiers les plus méritants
-                  de l’enseignement supérieur pour préparer les concours donnant accès aux postes d’encadrement de la
-                  fonction publique.<br>
-                  En 2021, 1700 places seront offertes.<br>
-                  Le rôle des tuteurs est essentiel auprès des élèves des Prépas Talents. En
-                  effet, les tuteurs accompagnent au maximum deux élèves dans leur préparation, en leur partageant,
-                  d’une part, des conseils méthodologiques sur les épreuves de concours et, d’autre part, des clés de
-                  réussite notamment organisationnelles pour vivre cette période intense de la manière la plus sereine
-                  possible.</p>
+                <p id="modalText">Les Prépas Talents sont des formations d&#39;excellence présentes au sein des écoles de service public,
+                des instituts d&#39;études politiques et des universités notamment. Elles ont pour finalité de préparer les
+                élèves aux concours de la fonction publique de catégorie B, A et « A+ » dans des conditions
+                d’accompagnement renforcé favorisant la réussite de tous les préparationnaires.<br>
+                Les Prépas Talents sont ainsi destinées aux étudiants de condition modeste les plus méritants de
+                l’enseignement supérieur afin de préparer les concours donnant particulièrement accès aux postes
+                d’encadrement de la fonction publique.<br>
+                Chaque étudiant inscrit en Prépa Talents bénéficiera d’un tutorat de qualité accompli par des fonctionnaires et hauts-fonctionnaires en poste, ou encore par des fonctionnaires stagiaires des écoles de service public.<br>
+                La présente charte a alors pour objet de préciser la nature de l’engagement respectif entre le tuteur et l’étudiant.<br>
+
+Engagement du tuteur<br>
+Le tuteur s’engage à :<br>
+- établir une relation de confiance avec l’étudiant, dans le respect de la confidentialité des
+échanges<br>
+- être disponible pendant l’ensemble de la durée de préparation aux concours de la fonction
+publique<br>
+- être et demeurer en contact régulier avec l’étudiant<br>
+- définir les modalités de fonctionnement caractéristique de la relation de tutorat calendrier
+de rencontres, exercices de tutorat, etc...)<br>
+- faire preuve d’adaptabilité, d’écoute bienveillante et d’ouverture<br>
+- mobiliser l’ensemble de ses compétences en lien avec le concours préparé par le
+préparationnaire<br>
+- faire partager son expérience professionnelle, ainsi que toutes informations qu’il estimerait
+utiles de transmettre<br>
+- prodiguer des conseils méthodologiques en termes d’organisation du travail, de rédaction
+administrative, de connaissance de l’environnement professionnel, d’attendus des concours,
+d’actualité thématique, etc.<br>
+- mobiliser, en fonction des besoins de l’étudiant, des personnes ressources<br>
+- avertir le responsable pédagogique lors de difficultés rencontrées avec un étudiant<br>
+- participer à une formation en ligne sur le tutorat
+
+                 </p>
                 </p>
               </div>                     
             </div>
