--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,19 +115,19 @@
 </div>
 
 <!--MODALE 2-->
-    <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-2" class="rf-modal">
+    <dialog aria-labelledby="rf-modal-title-modal-2" role="dialog" id="rf-modal-2" class="rf-modal">
       <div class="rf-container--fluid rf-container-md">
         <div class="rf-grid-row rf-grid-row--center">
           <div class="rf-col-12 rf-col-md-6">
             <div class="rf-modal__body">
               <div class="rf-modal__header">
-                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-1"
+                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-2"
                   target="_self">Fermer</button>
               </div>
     
               <div class="rf-modal__content">
                 <h2 id="rf-modal-title-modal-2" class="rf-modal__title"><span
-                    class="rf-fi-arrow-right-line rf-fi--sm"></span>«&nbsp;TEST&nbsp;»</h2>
+                    class="rf-fi-arrow-right-line rf-fi--sm"></span>«&nbsp;La charte&nbsp;»</h2>
                 <p id="modalText">Les Prépas Talents sont des formations d&#39;excellence présentes au sein des écoles de service public,
                 des instituts d&#39;études politiques et des universités notamment. Elles ont pour finalité de préparer les
                 élèves aux concours de la fonction publique de catégorie B, A et « A+ » dans des conditions
@@ -138,7 +138,7 @@
                 Chaque étudiant inscrit en Prépa Talents bénéficiera d’un tutorat de qualité accompli par des fonctionnaires et hauts-fonctionnaires en poste, ou encore par des fonctionnaires stagiaires des écoles de service public.<br>
                 La présente charte a alors pour objet de préciser la nature de l’engagement respectif entre le tuteur et l’étudiant.<br>
 
-Engagement du tuteur<br>
+<strong>Engagement du tuteur</strong><br>
 Le tuteur s’engage à :<br>
 - établir une relation de confiance avec l’étudiant, dans le respect de la confidentialité des
 échanges<br>
@@ -158,6 +158,18 @@ d’actualité thématique, etc.<br>
 - mobiliser, en fonction des besoins de l’étudiant, des personnes ressources<br>
 - avertir le responsable pédagogique lors de difficultés rencontrées avec un étudiant<br>
 - participer à une formation en ligne sur le tutorat
+
+<strong>Engagement de l'étudiant</strong><br>
+L’étudiant s’engage à : <br>
+- s’impliquer dans la mise en œuvre du dispositif de tutorat<br>
+- participer activement et assidûment aux échanges de tutorat<br>
+- respecter le calendrier de réunions établi en accord avec le tuteur dès la mise en place du
+tutorat<br>
+- signaler à son tuteur toute réunion ou rendez-vous qu’il ne pourrait honorer<br>
+- solliciter son tuteur en tant que de besoin et l’alerter en cas de difficultés<br>
+- être à l’écoute des conseils prodigués par le tuteur<br>
+- communiquer les résultats de ses épreuves dès qu’il en a connaissance<br>
+- avertir le responsable pédagogique dans l’hypothèse de difficultés rencontrées avec le tuteur<br>
 
                  </p>
                 </p>
