--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,19 +115,19 @@
 </div>
 
 <!--MODALE 2-->
-    <dialog aria-labelledby="rf-modal-title-modal-2" role="dialog" id="rf-modal-2" class="rf-modal">
+    <dialog aria-labelledby="rf-modal-title-modal-1" role="dialog" id="rf-modal-1" class="rf-modal">
       <div class="rf-container--fluid rf-container-md">
         <div class="rf-grid-row rf-grid-row--center">
           <div class="rf-col-12 rf-col-md-6">
             <div class="rf-modal__body">
               <div class="rf-modal__header">
-                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-2"
+                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-1"
                   target="_self">Fermer</button>
               </div>
     
               <div class="rf-modal__content">
-                <h2 id="rf-modal-title-modal-2" class="rf-modal__title"><span
-                    class="rf-fi-arrow-right-line rf-fi--sm"></span>«&nbsp;La charte&nbsp;»</h2>
+                <h2 id="rf-modal-title-modal-1" class="rf-modal__title"><span
+                    class="rf-fi-arrow-right-line rf-fi--sm"></span>La charte</h2>
                 <p id="modalText">Les Prépas Talents sont des formations d&#39;excellence présentes au sein des écoles de service public,
                 des instituts d&#39;études politiques et des universités notamment. Elles ont pour finalité de préparer les
                 élèves aux concours de la fonction publique de catégorie B, A et « A+ » dans des conditions
@@ -157,7 +157,7 @@ administrative, de connaissance de l’environnement professionnel, d’attendus
 d’actualité thématique, etc.<br>
 - mobiliser, en fonction des besoins de l’étudiant, des personnes ressources<br>
 - avertir le responsable pédagogique lors de difficultés rencontrées avec un étudiant<br>
-- participer à une formation en ligne sur le tutorat
+- participer à une formation en ligne sur le tutorat<br>
 
 <strong>Engagement de l'étudiant</strong><br>
 L’étudiant s’engage à : <br>
