--- a/views/index.ejs
+++ b/views/index.ejs
@@ -136,10 +136,10 @@
                 l’enseignement supérieur afin de préparer les concours donnant particulièrement accès aux postes
                 d’encadrement de la fonction publique.<br>
                 Chaque étudiant inscrit en Prépa Talents bénéficiera d’un tutorat de qualité accompli par des fonctionnaires et hauts-fonctionnaires en poste, ou encore par des fonctionnaires stagiaires des écoles de service public.<br>
-                La présente charte a alors pour objet de préciser la nature de l’engagement respectif entre le tuteur et l’étudiant.<br>
+                La présente charte a alors pour objet de préciser la nature de l’engagement respectif entre le tuteur et l’étudiant.</p>
 
-<strong>Engagement du tuteur</strong><br>
-Le tuteur s’engage à :<br>
+<p><strong>Engagement du tuteur</strong></p>
+<p>Le tuteur s’engage à :<br>
 - établir une relation de confiance avec l’étudiant, dans le respect de la confidentialité des
 échanges<br>
 - être disponible pendant l’ensemble de la durée de préparation aux concours de la fonction
@@ -157,10 +157,10 @@ administrative, de connaissance de l’environnement professionnel, d’attendus
 d’actualité thématique, etc.<br>
 - mobiliser, en fonction des besoins de l’étudiant, des personnes ressources<br>
 - avertir le responsable pédagogique lors de difficultés rencontrées avec un étudiant<br>
-- participer à une formation en ligne sur le tutorat<br>
+- participer à une formation en ligne sur le tutorat</p>
 
-<strong>Engagement de l'étudiant</strong><br>
-L’étudiant s’engage à : <br>
+<p><strong>Engagement de l'étudiant</strong></p>
+<p>L’étudiant s’engage à : <br>
 - s’impliquer dans la mise en œuvre du dispositif de tutorat<br>
 - participer activement et assidûment aux échanges de tutorat<br>
 - respecter le calendrier de réunions établi en accord avec le tuteur dès la mise en place du
@@ -169,9 +169,9 @@ tutorat<br>
 - solliciter son tuteur en tant que de besoin et l’alerter en cas de difficultés<br>
 - être à l’écoute des conseils prodigués par le tuteur<br>
 - communiquer les résultats de ses épreuves dès qu’il en a connaissance<br>
-- avertir le responsable pédagogique dans l’hypothèse de difficultés rencontrées avec le tuteur<br>
+- avertir le responsable pédagogique dans l’hypothèse de difficultés rencontrées avec le tuteur<p>
 
-                 </p>
+                 
                 </p>
               </div>                     
             </div>
