--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,7 @@
           <div class="rf-col-12 rf-col-md-6">
             <div class="rf-modal__body">
               <div class="rf-modal__header">
-                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-1"
+                <button class="rf-link--close rf-link" title="Fermer la fenêtre modale" aria-controls="rf-modal-2"
                   target="_self">Fermer</button>
               </div>
     
@@ -138,8 +138,8 @@
                 Chaque étudiant inscrit en Prépa Talents bénéficiera d’un tutorat de qualité accompli par des fonctionnaires et hauts-fonctionnaires en poste, ou encore par des fonctionnaires stagiaires des écoles de service public.<br>
                 La présente charte a alors pour objet de préciser la nature de l’engagement respectif entre le tuteur et l’étudiant.</p>
 
-<p><strong>Engagement du tuteur</strong></p>
-<p>Le tuteur s’engage à :<br>
+<p id="rf-modal-title-modal-1"><strong>Engagement du tuteur</strong></p>
+<p id="modalText">Le tuteur s’engage à :<br>
 - établir une relation de confiance avec l’étudiant, dans le respect de la confidentialité des
 échanges<br>
 - être disponible pendant l’ensemble de la durée de préparation aux concours de la fonction
@@ -159,8 +159,8 @@ d’actualité thématique, etc.<br>
 - avertir le responsable pédagogique lors de difficultés rencontrées avec un étudiant<br>
 - participer à une formation en ligne sur le tutorat</p>
 
-<p><strong>Engagement de l'étudiant</strong></p>
-<p>L’étudiant s’engage à : <br>
+<p id="rf-modal-title-modal-1"><strong>Engagement de l'étudiant</strong></p>
+<p id="modalText">L’étudiant s’engage à : <br>
 - s’impliquer dans la mise en œuvre du dispositif de tutorat<br>
 - participer activement et assidûment aux échanges de tutorat<br>
 - respecter le calendrier de réunions établi en accord avec le tuteur dès la mise en place du
