--- a/views/index.ejs
+++ b/views/index.ejs
@@ -210,7 +210,7 @@ tutorat<br>
         <div class="rf-text--sm">
           <div class="sectionThreeNumber">3</div>
           <img class="sectionThreeCardImage" src="../../static/images/3.png" alt="" />
-          <p class="sectionThreeCardImageText">Je participe au programme de formation, j’intègre le vivier de tuteurs.
+          <p class="sectionThreeCardImageText">Je participe au programme de formation (réalisé par l'IRA de Lille), j’intègre le vivier de tuteurs.
           </p>
         </div>
       </div>
