--- a/views/index.ejs
+++ b/views/index.ejs
@@ -210,7 +210,7 @@ tutorat<br>
         <div class="rf-text--sm">
           <div class="sectionThreeNumber">3</div>
           <img class="sectionThreeCardImage" src="../../static/images/3.png" alt="" />
-          <p class="sectionThreeCardImageText">Je participe au programme de formation (réalisé par l'IRA de Lille), j’intègre le vivier de tuteurs.
+          <p class="sectionThreeCardImageText">Je participe au module de formation en ligne (réalisé par l'IRA de Lille), j’intègre le vivier de tuteurs.
           </p>
         </div>
       </div>
@@ -273,24 +273,19 @@ tutorat<br>
     </div>
   </div>
 </div>
-<!--SECTION 5
+
+<!--SECTION 5-->
   <div id="sectionFive" class="rf-container-fluid rf-centered rf-my-6w">
     <div class="rf-grid-row rf-grid-row--center">
       <h2 class="sectionTitle">Les partenaires classes “Talents”</h2>
     </div>
     <div id="sectionTFiveCardContainer" class="rf-grid-row rf-grid-row--center rf-grid-row--middle">
       <div class="rf-col-xs-12 rf-col-md-2 rf-p-3w">
-        <img class="partners" src="../../static/images/Ena.svg" alt="Ena" />
+        <img class="partners" src="../../static/images/ena.png" alt="Ena" />
       </div>
       <div class="rf-col-xs-12 rf-col-md-2 rf-p-3w">
-        <img class="partners" src="../../static/images/Ipag.svg" alt="Ipag" />
-      </div>
-      <div class="rf-col-xs-12 rf-col-md-2 rf-p-3w">
-        <img class="partners" src="../../static/images/SciencesPo.svg" alt="SciencesPo" />
-      </div>
-      <div class="rf-col-xs-12 rf-col-md-2 rf-p-3w">
-        <img class="partners" src="../../static/images/Resp.svg" alt="Resp" />
+        <img class="partners" src="../../static/images/ira.png" alt="Ira Lille" />
       </div>
     </div>
-  </div>-->
+  </div>
 <%- include('partials/footer') -%>
