--- a/views/index.ejs
+++ b/views/index.ejs
@@ -277,11 +277,11 @@ tutorat<br>
 <!--SECTION 5-->
   <div id="sectionFive" class="rf-container-fluid rf-centered rf-my-6w">
     <div class="rf-grid-row rf-grid-row--center">
-      <h2 class="sectionTitle">Les partenaires classes “Talents”</h2>
+      <h2 class="sectionTitle">Partenaires</h2>
     </div>
     <div id="sectionTFiveCardContainer" class="rf-grid-row rf-grid-row--center rf-grid-row--middle">
       <div class="rf-col-xs-12 rf-col-md-2 rf-p-3w">
-        <img class="partners" src="../../static/images/ena.png" alt="Ena" />
+        <img class="partners" src="../../static/images/ena.jpg" alt="Ena" />
       </div>
       <div class="rf-col-xs-12 rf-col-md-2 rf-p-3w">
         <img class="partners" src="../../static/images/ira.png" alt="Ira Lille" />
