--- a/views/index.ejs
+++ b/views/index.ejs
@@ -210,7 +210,7 @@ tutorat<br>
         <div class="rf-text--sm">
           <div class="sectionThreeNumber">3</div>
           <img class="sectionThreeCardImage" src="../../static/images/3.png" alt="" />
-          <p class="sectionThreeCardImageText">Je participe au module de formation en ligne (réalisé par l'IRA de Lille), j’intègre le vivier de tuteurs.
+          <p class="sectionThreeCardImageText">Je participe au module de formation en ligne* , j’intègre le vivier de tuteurs.
           </p>
         </div>
       </div>
@@ -236,8 +236,8 @@ tutorat<br>
       href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">Je m’engage</a>
       
     <button class="rf-btn rf-btn rf-btn--alt"><a href="/faq">J'ai encore des questions ?</a></button>
-    
   </div>
+  <p class="smallTextAsterisk">*Réalisé par l'IRA de lille</p>
 </div>
 <!--SECTION 4-->
 <div id="sectionFour" class="rf-container-fluid rf-centered rf-py-6w">
