--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,10 @@
       <h1 id="sectionOneTitle" class="sectionTitle">Élèves et anciens élèves des Écoles de Service Public,<br>
         Devenez tuteurs&nbsp;!</p>
       </h1>
-      <div class="sectionSubTitle" class="rf-text--lg">Rejoignez la communauté des tuteurs et participez à la réussite
-        des élèves des Prépas Talents.
+      <div class="sectionSubTitle" class="rf-text--lg">La campagne de recrutement des tuteurs pour les Classes Prépas talents 2021 est désormais close.
       </div>
       <a id="sectionOneButton" class="rf-btn rf-btn rf-btn--alt"
-        href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">Je
-        postule</a>
+        href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">Pré-inscription à la prochaine session de recrutement 2022</a>
     </div>
     <div id="talentImage" class="rf-col-md-4 rf-col-xs-12">
       <img id="talents" class="fr-responsive-img" src="../../static/images/talents-service-public.png"
@@ -233,7 +231,7 @@ tutorat<br>
       </div>
     </div>
     <a class="rf-btn rf-btn rf-btn--alt"
-      href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">Je m’engage</a>
+      href="https://www.demarches-simplifiees.fr/commencer/tutorat-talents-service-public">Pré-inscription à la prochaine session de recrutement 2022</a>
       
     <button class="rf-btn rf-btn rf-btn--alt"><a href="/faq">J'ai encore des questions ?</a></button>
   </div>
